force-app/main/default/objects/student__c/fields/class__c.field-meta.xml
<CustomField>
    <fullName>class__c</fullName>
    <label>class</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>