force-app/main/default/objects/student__c/fields/E_Mail__c.field-meta.xml
<CustomField>
    <fullName>E_Mail__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>E-Mail</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>