force-app/main/default/objects/student__c/fields/Maths__c.field-meta.xml
<CustomField>
    <fullName>Maths__c</fullName>
    <label>Maths</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>