force-app/main/default/objects/student__c/fields/Result_Flag__c.field-meta.xml
<CustomField>
    <fullName>Result_Flag__c</fullName>
    <formula>CASE( Result__c , &quot;PASS&quot;,IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 30, 30), &quot;FAIL&quot;, IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 30, 30),&apos;default&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Result Flag</label>
    <type>Text</type>
</CustomField>