force-app/main/default/objects/student__c/fields/Resulting_imge__c.field-meta.xml
<CustomField>
    <fullName>Resulting_imge__c</fullName>
    <label>Resulting imge</label>
    <length>1335</length>
    <type>Html</type>
</CustomField>