force-app/main/default/objects/student__c/fields/Roll_Number__c.field-meta.xml
<CustomField>
    <fullName>Roll_Number__c</fullName>
    <label>Roll Number</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>